header + 1er article

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="fr" dir="ltr">
 
 <head>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <title>DELIVER</title>
 </head>
@@ -13,22 +14,24 @@
         <nav>
             <h1><a href="#">DELIVER</a></h1>
             <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><i></i></li>
+                <li><a href="#">how it works</a></li>
+                <li><a href="#">pricing</a></li>
+                <li><a href="#">contact</a></li>
+                <li><a href="#">signin</a></li>
+                <li><a href="#">signup</a></li>
+                <li><i class="fas fa-search"></i></li>
             </ul>
         </nav>
-        <img src="" alt="">
+        <img src="https://picsum.photos/100" alt="">
         <h2>Package Delivery</h2>
         <small>We deliver any package in your city</small>
-        <input type="text" name="" value="" placeholder="Enter your product url">
-        <button type="button" name="button"><i></i></button>
+        <div>
+            <input type="text" name="" value="" placeholder="Enter your product url">
+            <button type="button" name="button"><i class="fas fa-arrow-right"></i></button>
+        </div>
     </header>
     <main>
-        <article class="left">
+        <article class="left plop">
             <h3>About Deliver</h3>
             <small>WHY WE BEST</small>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
